# Capstone-Project-2

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  RISCVTargetParserTableGen.vcxproj  RISCVTargetParserTableGen.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  cmake_install.cmake  commands.txt  intrinsics_gen.vcxproj  issues.txt  omp_gen.vcxproj  tino.sln  tino.vcxproj  tino.vcxproj.filters  tn.sln  tn.vcxproj  tn.vcxproj.filters
src/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  RISCVTargetParserTableGen.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  acc_gen.vcxproj  cmake_install.cmake  intrinsics_gen.vcxproj  intrinsics_gen.vcxproj.filters  main.cpp  main.sln  main.vcxproj  main.vcxproj.filters  omp_gen.vcxproj  tino.sln  tino.vcxproj
src/Release/: test.kls  tino.exp  tino.lib
src/Release/examples/: classes.tn  error.tn  files.tn  for.tn  functions.tn  globalvar.tn  ifelse.tn  maths.tn  variables.tn  while.tn
src/Release/test/: maths.tn
src/ast/: ast.h
src/codegen/: codegen.cpp  codegen.h  t.py
src/lexer/: lexer.cpp  lexer.h
src/main.dir/Release/: main.exe.recipe
src/main.dir/Release/main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/parser/: p.cpp  parser.cpp  parser.h
src/tino.dir/Release/: tino.exe.recipe
src/tino.dir/Release/tino.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  (+9 more)
(+18 files in other folders)
